--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
   "scripts": {
     "start": "brunch watch --server",
     "build": "brunch build --production",
-    "push": "brunch build --production && git subtree push --prefix public origin gh-pages"
+    "push": "git subtree push --prefix public origin gh-pages"
   },
   "dependencies": {
     "react": "^15.4",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^15.4",
+    "react-number-format": "^3.1.3",
     "react-router-dom": "^4.2.2",
     "react-uikit3": "^0.11.3",
-    "request": "^2.83.0",
-    "stellar-sdk": "^0.8.0"
+    "request": "^2.83.0"
   },
   "devDependencies": {
     "auto-reload-brunch": "^2",
